# ffb-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  progress.html
crates/ffb-core/: Cargo.toml
crates/ffb-core/benches/: pathfinding.rs  state_clone.rs
crates/ffb-core/src/: actions.rs  lib.rs  modifiers.rs  pathfinding.rs  rng.rs  skills.rs  types.rs
crates/ffb-mcts/: Cargo.toml
crates/ffb-mcts/benches/: mcts.rs
crates/ffb-mcts/src/: candidates.rs  lib.rs  node.rs  search.rs
crates/ffb-py/: Cargo.toml
crates/ffb-py/src/: lib.rs
crates/ffb-server/: Cargo.toml
crates/ffb-server/src/: api.rs  lib.rs  main.rs  ws.rs
crates/ffb-sim/: Cargo.toml
crates/ffb-sim/benches/: full_game.rs
crates/ffb-sim/src/: canonical_strategy.rs  evaluation.rs  lib.rs  move_policy.rs  parity_log.rs  roster.rs  setup.rs  simulation.rs
ffb-rust/: AGENT_CONTRACT.md  AUDIT_scatter.md  CLAUDE.md  COMPONENTS.md  Cargo.toml  GAPS.md  PARITY_PLAN.md  SESSION.md  T3_COVERAGE.md  TRANSLATION_TRACKER.md  coverage.html  progress-hook.md  progress.html  run_failing.ps1  run_final_t2.ps1  run_t2.ps1  run_t2_100seeds.ps1  run_t2_10seeds.ps1  run_t2_debugtarget.ps1  run_t2_new.ps1  run_t3_lineman.ps1  run_t3_mirror.ps1  t3_coverage.html
ffb-rust/crates/: progress.html
ffb-rust/crates/ffb-client/: Cargo.toml
ffb-rust/crates/ffb-engine/: Cargo.toml
ffb-rust/crates/ffb-mechanics/: Cargo.toml
ffb-rust/crates/ffb-model/: Cargo.toml
ffb-rust/crates/ffb-parity/: Cargo.toml
ffb-rust/crates/ffb-protocol/: Cargo.toml
ffb-rust/crates/ffb-server/: Cargo.toml
ffb-rust/data/inducements/: bb2016_inducements.json  bb2020_inducements.json  bb2025_inducements.json
ffb-rust/data/injuries/: serious_injuries.json
ffb-rust/data/prayers/: bb2020_prayers.json  bb2025_prayers.json
ffb-rust/data/skills/: bb2016_skills.json  bb2020_skills.json  bb2025_skills.json  common_skills.json  mixed_skills.json
ffb-rust/data/star_players/: all_editions.json
ffb-rust/docs/: PHASE_AAD_PLAN.md  PHASE_AAF_SKILL_HOOK_AUDIT.md  PHASE_AI_PLAN.md  PHASE_AJ_PLAN.md  PHASE_AK_PLAN.md  PHASE_ZV_PLAN.md  PHASE_ZW_PLAN.md  PHASE_ZX_PLAN.md
ffb-rust/docs/step_port/: 00_framework.md  10_sequences.md  30_skills.md  40_network.md  INVARIANTS.md  NEXT_SESSION.md  PROGRESS.md  SEED1_DICE_MAP.md  TESTING.md
ffb-rust/parity/: debug_57.txt  seed_100_java.jsonl  seed_100_rust.jsonl  seed_10_rust.jsonl  seed_11_rust.jsonl  seed_12_rust.jsonl  seed_13_java.jsonl  seed_13_rust.jsonl  seed_14_java.jsonl  seed_14_rust.jsonl  seed_15_java.jsonl  seed_15_rust.jsonl  seed_16_rust.jsonl  seed_17_rust.jsonl  seed_18_rust.jsonl  seed_19_rust.jsonl  seed_1_java_new.jsonl  seed_1_rust.jsonl  seed_20_rust.jsonl  seed_21_rust.jsonl  seed_22_java.jsonl  seed_22_rust.jsonl  seed_23_java.jsonl  seed_23_rust.jsonl  seed_24_rust.jsonl  seed_25_rust.jsonl  seed_26_java.jsonl  seed_26_rust.jsonl  seed_27_rust.jsonl  seed_28_rust.jsonl  seed_29_java.jsonl  seed_29_rust.jsonl  seed_2_java.jsonl  seed_2_rust.jsonl  seed_30_rust.jsonl  seed_31_rust.jsonl  seed_32_java.jsonl  seed_32_rust.jsonl  seed_33_rust.jsonl  seed_34_rust.jsonl  (+107 more)
ffb-rust/parity/amazon_vs_amazon/: seed_100_java.jsonl  seed_100_rust.jsonl  seed_100_rust_events.jsonl  seed_10_java.jsonl  seed_10_rust.jsonl  seed_10_rust_events.jsonl  seed_11_java.jsonl  seed_11_rust.jsonl  seed_11_rust_events.jsonl  seed_12_java.jsonl  seed_12_rust.jsonl  seed_12_rust_events.jsonl  seed_13_java.jsonl  seed_13_rust.jsonl  seed_13_rust_events.jsonl  seed_14_java.jsonl  seed_14_rust.jsonl  seed_14_rust_events.jsonl  seed_15_java.jsonl  seed_15_rust.jsonl  seed_15_rust_events.jsonl  seed_16_java.jsonl  seed_16_rust.jsonl  seed_16_rust_events.jsonl  seed_17_java.jsonl  seed_17_rust.jsonl  seed_17_rust_events.jsonl  seed_18_java.jsonl  seed_18_rust.jsonl  seed_18_rust_events.jsonl  seed_19_java.jsonl  seed_19_rust.jsonl  seed_19_rust_events.jsonl  seed_1_java.jsonl  seed_1_rust.jsonl  seed_1_rust_events.jsonl  seed_20_java.jsonl  seed_20_rust.jsonl  seed_20_rust_events.jsonl  seed_21_java.jsonl  (+260 more)
ffb-rust/parity/bb2025_human_vs_human/: seed_1_visual.html
ffb-rust/parity/bb2025_human_vs_orc/: seed_1_visual.html
ffb-rust/parity/bb2025_lineman_vs_lineman/: seed_1_visual.html  seed_2_visual.html
ffb-rust/parity/chaos_chosen_vs_chaos_chosen/: seed_100_java.jsonl  seed_100_rust.jsonl  seed_10_java.jsonl  seed_10_rust.jsonl  seed_11_java.jsonl  seed_11_rust.jsonl  seed_12_java.jsonl  seed_12_rust.jsonl  seed_13_java.jsonl  seed_13_rust.jsonl  seed_14_java.jsonl  seed_14_rust.jsonl  seed_15_java.jsonl  seed_15_rust.jsonl  seed_16_java.jsonl  seed_16_rust.jsonl  seed_17_java.jsonl  seed_17_rust.jsonl  seed_18_java.jsonl  seed_18_rust.jsonl  seed_19_java.jsonl  seed_19_rust.jsonl  seed_1_java.jsonl  seed_1_rust.jsonl  seed_20_java.jsonl  seed_20_rust.jsonl  seed_21_java.jsonl  seed_21_rust.jsonl  seed_22_java.jsonl  seed_22_rust.jsonl  seed_23_java.jsonl  seed_23_rust.jsonl  seed_24_java.jsonl  seed_24_rust.jsonl  seed_25_java.jsonl  seed_25_rust.jsonl  seed_26_java.jsonl  seed_26_rust.jsonl  seed_27_java.jsonl  seed_27_rust.jsonl  (+160 more)
ffb-rust/parity/chaos_dwarf_vs_chaos_dwarf/: seed_100_java.jsonl  seed_100_rust.jsonl  seed_10_java.jsonl  seed_10_rust.jsonl  seed_11_java.jsonl  seed_11_rust.jsonl  seed_12_java.jsonl  seed_12_rust.jsonl  seed_13_java.jsonl  seed_13_rust.jsonl  seed_14_java.jsonl  seed_14_rust.jsonl  seed_15_java.jsonl  seed_15_rust.jsonl  seed_16_java.jsonl  seed_16_rust.jsonl  seed_17_java.jsonl  seed_17_rust.jsonl  seed_18_java.jsonl  seed_18_rust.jsonl  (+180 more)
ffb-rust/scripts/: audit_client_stubs.py  download_rules.py  gen_java_teams.py  gen_translation_tracker.py  parity_compare.py  parity_report.py  parity_run.py  reconcile_tracker.py  roster_gen.py  t3_report.py  t3_summary.py
(+10291 files in other folders)
