[workspace]
members = [
    "crates/ffb-core",
    "crates/ffb-sim",
    "crates/ffb-mcts",
    "crates/ffb-server",
    "crates/ffb-py",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
smallvec = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
rayon = "1"
