[workspace]
members = [
    "crates/ffb-model",
    "crates/ffb-mechanics",
    "crates/ffb-engine",
    "crates/ffb-protocol",
    "crates/ffb-client",
    "crates/ffb-parity",
    "crates/ffb-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
axum = { version = "0.7", features = ["ws"] }
rand = { version = "0.8" }
rand_chacha = "0.3"
rand_xoshiro = "0.6"
rand_core = { version = "0.6", features = ["alloc"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
mysql_async = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
