[package]
name = "ffb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "pathfinding"
harness = false

[[bench]]
name = "state_clone"
harness = false
