[package]
name = "ffb-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "ffb"
crate-type = ["cdylib"]

[dependencies]
ffb-core = { path = "../ffb-core" }
ffb-sim = { path = "../ffb-sim" }
ffb-mcts = { path = "../ffb-mcts" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
numpy = "0.22"
