[package]
name = "ffb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ffb-core = { path = "../ffb-core" }
ffb-sim = { path = "../ffb-sim" }
ffb-mcts = { path = "../ffb-mcts" }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "ffb-server"
path = "src/main.rs"
