[package]
name = "ffb-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
ffb-core = { path = "../ffb-core" }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "full_game"
harness = false
