[package]
name = "ffb-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ffb-model = { path = "../ffb-model" }
ffb-mechanics = { path = "../ffb-mechanics" }
ffb-engine = { path = "../ffb-engine" }
ffb-protocol = { path = "../ffb-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
rand_chacha = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
