[package]
name = "ffb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ffb-model = { path = "../ffb-model" }
ffb-mechanics = { path = "../ffb-mechanics" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_xoshiro = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
