[package]
name = "ffb-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ffb-server"
path = "src/main.rs"

[dependencies]
ffb-model = { path = "../ffb-model" }
ffb-engine = { path = "../ffb-engine" }
ffb-protocol = { path = "../ffb-protocol" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
mysql_async = { workspace = true }
reqwest = { workspace = true }
